objects/TracRTC__Pending_Action__c.object
<CustomObject>
    <fields>
        <fullName>TracRTC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pending Actions</relationshipLabel>
        <relationshipName>Pending_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Pending Actions</relationshipLabel>
        <relationshipName>Pending_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pending Actions</relationshipLabel>
        <relationshipName>Pending_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Flow_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flow Step</label>
        <referenceTo>TracRTC__Flow_Step__c</referenceTo>
        <relationshipLabel>Pending Actions</relationshipLabel>
        <relationshipName>Pending_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Last_Modified_By_Complete__c</fullName>
        <label>Last Modified By Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Pending Actions</relationshipLabel>
        <relationshipName>Pending_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pending Actions</relationshipLabel>
        <relationshipName>Pending_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Retraction_Attempts__c</fullName>
        <label>Retraction Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pending Action</label>
    <nameField>
        <label>Pending Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pending Actions</pluralLabel>
    <recordTypes>
        <fullName>TracRTC__Retry_Complete_Action</fullName>
        <active>true</active>
        <label>Retry Complete Action</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>